[gd_scene load_steps=10 format=2]

[ext_resource path="res://Nodes/Widget/GUI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FredokaOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Nodes/Widget/DamagePanel.gd" type="Script" id=3]
[ext_resource path="res://Themes/MainTheme.tres" type="Theme" id=4]
[ext_resource path="res://Themes/ClockCounterShade.tres" type="Texture" id=5]
[ext_resource path="res://Nodes/Widget/LevelProgress.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.278431, 0.615686, 0.862745, 1 )

[sub_resource type="Theme" id=3]
ProgressBar/styles/fg = SubResource( 2 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="FPSLabel" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 27.0
margin_top = 104.0
margin_right = 348.0
margin_bottom = 228.0
custom_fonts/font = SubResource( 1 )
text = "FPS"

[node name="LevelTime" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 31.0
margin_top = 41.0
margin_right = 352.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 1 )
text = "Time: "

[node name="Debugger" type="Label" parent="."]
unique_name_in_owner = true
margin_left = 36.0
margin_top = 156.0
margin_right = 832.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 1 )
text = "debug:
"

[node name="ExperienceBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -420.0
margin_top = 54.0
margin_bottom = 116.0
size_flags_vertical = 1
theme = SubResource( 3 )
value = 90.0
percent_visible = false

[node name="LvLabel" type="Label" parent="ExperienceBar"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -25.0
custom_fonts/font = SubResource( 1 )
text = "LV: ???"
align = 2
valign = 1

[node name="DamagePanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -370.0
margin_right = 420.0
theme = ExtResource( 4 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="DamagePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="DamagePanel/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayerStats" type="HBoxContainer" parent="DamagePanel/Control/VBoxContainer"]
margin_right = 380.0
margin_bottom = 30.0

[node name="StatName" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStats"]
self_modulate = Color( 1, 0.894118, 0.470588, 1 )
margin_right = 145.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 0 )
text = "Player Stats"
valign = 1

[node name="HSeparator5" type="HSeparator" parent="DamagePanel/Control/VBoxContainer"]
margin_top = 34.0
margin_right = 380.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 10 )

[node name="PlayerStatsSlotHealth" type="HBoxContainer" parent="DamagePanel/Control/VBoxContainer"]
unique_name_in_owner = true
margin_top = 48.0
margin_right = 380.0
margin_bottom = 78.0

[node name="StatName" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotHealth"]
self_modulate = Color( 1, 0.894118, 0.470588, 1 )
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 0 )
text = "Damage: "
valign = 1
clip_text = true

[node name="Base" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotHealth"]
self_modulate = Color( 0.301961, 0.65098, 1, 1 )
margin_left = 124.0
margin_right = 204.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "1.00"
align = 1
valign = 1
clip_text = true

[node name="+" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotHealth"]
margin_left = 208.0
margin_right = 258.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
text = "+"
align = 1
valign = 1

[node name="Additional" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotHealth"]
self_modulate = Color( 0.560784, 0.870588, 0.364706, 1 )
margin_left = 262.0
margin_right = 342.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "1.00"
align = 1
valign = 1
clip_text = true

[node name="HSeparator" type="HSeparator" parent="DamagePanel/Control/VBoxContainer"]
margin_top = 82.0
margin_right = 380.0
margin_bottom = 92.0
rect_min_size = Vector2( 0, 10 )

[node name="PlayerStatsSlotDamage" type="HBoxContainer" parent="DamagePanel/Control/VBoxContainer"]
unique_name_in_owner = true
margin_top = 96.0
margin_right = 380.0
margin_bottom = 126.0

[node name="StatName" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotDamage"]
self_modulate = Color( 1, 0.894118, 0.470588, 1 )
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 0 )
text = "Damage: "
valign = 1
clip_text = true

[node name="Base" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotDamage"]
self_modulate = Color( 0.301961, 0.65098, 1, 1 )
margin_left = 124.0
margin_right = 204.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "1.00"
align = 1
valign = 1
clip_text = true

[node name="+" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotDamage"]
margin_left = 208.0
margin_right = 258.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
text = "+"
align = 1
valign = 1

[node name="Additional" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotDamage"]
self_modulate = Color( 0.560784, 0.870588, 0.364706, 1 )
margin_left = 262.0
margin_right = 342.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "1.00"
align = 1
valign = 1
clip_text = true

[node name="HSeparator2" type="HSeparator" parent="DamagePanel/Control/VBoxContainer"]
margin_top = 130.0
margin_right = 380.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 10 )

[node name="PlayerStatsSlotMovementSpeed" type="HBoxContainer" parent="DamagePanel/Control/VBoxContainer"]
unique_name_in_owner = true
margin_top = 144.0
margin_right = 380.0
margin_bottom = 174.0

[node name="StatName" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotMovementSpeed"]
self_modulate = Color( 1, 0.894118, 0.470588, 1 )
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 0 )
text = "Damage: "
valign = 1
clip_text = true

[node name="Base" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotMovementSpeed"]
self_modulate = Color( 0.301961, 0.65098, 1, 1 )
margin_left = 124.0
margin_right = 204.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "1.00"
align = 1
valign = 1
clip_text = true

[node name="+" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotMovementSpeed"]
margin_left = 208.0
margin_right = 258.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
text = "+"
align = 1
valign = 1

[node name="Additional" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotMovementSpeed"]
self_modulate = Color( 0.560784, 0.870588, 0.364706, 1 )
margin_left = 262.0
margin_right = 342.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "1.00"
align = 1
valign = 1
clip_text = true

[node name="HSeparator4" type="HSeparator" parent="DamagePanel/Control/VBoxContainer"]
margin_top = 178.0
margin_right = 380.0
margin_bottom = 188.0
rect_min_size = Vector2( 0, 10 )

[node name="PlayerStatsSlotProjectileAmount" type="HBoxContainer" parent="DamagePanel/Control/VBoxContainer"]
unique_name_in_owner = true
margin_top = 192.0
margin_right = 380.0
margin_bottom = 222.0

[node name="StatName" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotProjectileAmount"]
self_modulate = Color( 1, 0.894118, 0.470588, 1 )
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 0 )
text = "Damage: "
valign = 1
clip_text = true

[node name="Base" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotProjectileAmount"]
self_modulate = Color( 0.301961, 0.65098, 1, 1 )
margin_left = 124.0
margin_right = 204.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "1.00"
align = 1
valign = 1
clip_text = true

[node name="+" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotProjectileAmount"]
margin_left = 208.0
margin_right = 258.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
text = "+"
align = 1
valign = 1

[node name="Additional" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotProjectileAmount"]
self_modulate = Color( 0.560784, 0.870588, 0.364706, 1 )
margin_left = 262.0
margin_right = 342.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "1.00"
align = 1
valign = 1
clip_text = true

[node name="HSeparator6" type="HSeparator" parent="DamagePanel/Control/VBoxContainer"]
margin_top = 226.0
margin_right = 380.0
margin_bottom = 236.0
rect_min_size = Vector2( 0, 10 )

[node name="PlayerStatsSlotHealthRegen" type="HBoxContainer" parent="DamagePanel/Control/VBoxContainer"]
unique_name_in_owner = true
margin_top = 240.0
margin_right = 380.0
margin_bottom = 270.0

[node name="StatName" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotHealthRegen"]
self_modulate = Color( 1, 0.894118, 0.470588, 1 )
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 0 )
text = "Damage: "
valign = 1
clip_text = true

[node name="Base" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotHealthRegen"]
self_modulate = Color( 0.301961, 0.65098, 1, 1 )
margin_left = 124.0
margin_right = 204.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "1.00"
align = 1
valign = 1
clip_text = true

[node name="+" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotHealthRegen"]
margin_left = 208.0
margin_right = 258.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
text = "+"
align = 1
valign = 1

[node name="Additional" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotHealthRegen"]
self_modulate = Color( 0.560784, 0.870588, 0.364706, 1 )
margin_left = 262.0
margin_right = 342.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "1.00"
align = 1
valign = 1
clip_text = true

[node name="HSeparator7" type="HSeparator" parent="DamagePanel/Control/VBoxContainer"]
margin_top = 274.0
margin_right = 380.0
margin_bottom = 284.0
rect_min_size = Vector2( 0, 10 )

[node name="PlayerStatsSlotProjectileSpeed" type="HBoxContainer" parent="DamagePanel/Control/VBoxContainer"]
unique_name_in_owner = true
margin_top = 288.0
margin_right = 380.0
margin_bottom = 318.0

[node name="StatName" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotProjectileSpeed"]
self_modulate = Color( 1, 0.894118, 0.470588, 1 )
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 0 )
text = "Damage: "
valign = 1
clip_text = true

[node name="Base" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotProjectileSpeed"]
self_modulate = Color( 0.301961, 0.65098, 1, 1 )
margin_left = 124.0
margin_right = 204.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "1.00"
align = 1
valign = 1
clip_text = true

[node name="+" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotProjectileSpeed"]
margin_left = 208.0
margin_right = 258.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )
text = "+"
align = 1
valign = 1

[node name="Additional" type="Label" parent="DamagePanel/Control/VBoxContainer/PlayerStatsSlotProjectileSpeed"]
self_modulate = Color( 0.560784, 0.870588, 0.364706, 1 )
margin_left = 262.0
margin_right = 342.0
margin_bottom = 30.0
rect_min_size = Vector2( 80, 0 )
text = "1.00"
align = 1
valign = 1
clip_text = true

[node name="ItemsPanel" type="Control" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -154.0
margin_right = 420.0
margin_bottom = 160.0
rect_clip_content = true

[node name="Panel" type="Panel" parent="ItemsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="ItemsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="ItemGrid" type="GridContainer" parent="ItemsPanel/MarginContainer"]
unique_name_in_owner = true
margin_right = 400.0
margin_bottom = 294.0
columns = 7

[node name="LevelProgress" type="Control" parent="."]
margin_top = 228.0
margin_right = 420.0
margin_bottom = 303.0
rect_clip_content = true
script = ExtResource( 7 )

[node name="HBoxContainer" type="VBoxContainer" parent="LevelProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="LevelProgress/HBoxContainer"]
margin_right = 420.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.294118, 0.356863, 0.670588, 1 )

[node name="TextureProgress" type="TextureProgress" parent="LevelProgress/HBoxContainer/ColorRect"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 29.0
margin_bottom = -29.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1.0
step = 0.01
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
